--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@upstash/redis": "^1.35.3",
+    "axios": "^1.11.0",
+    "bullmq": "^5.58.0",
+    "lucide-react": "^0.539.0",
+    "mongoose": "^8.17.1",
+    "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.4"
+    "redis": "^5.8.1",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "typescript": "^5",
